<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="match_parent"
        android:background="#58A636"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculadora_da_fecap"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valor1"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ete_valor1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|numberDecimal|numberSigned"
            android:numeric="decimal"
            android:text="0" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valor2"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ete_valor2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|numberDecimal|numberSigned"
            android:text="0" />

        <TextView
            android:id="@+id/tv_resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <Button
            android:id="@+id/btn_soma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#4CAF50"
            android:onClick="operacao"
            android:text="@string/somar"
            app:iconTint="#BD3333"
            app:rippleColor="#EFA5A5" />

        <Button
            android:id="@+id/btn_subtrair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#4CAF50"
            android:onClick="operacao"
            android:text="@string/subtrair" />

        <Button
            android:id="@+id/btn_multiplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#4CAF50"
            android:onClick="operacao"
            android:text="@string/multiplicar" />

        <Button
            android:id="@+id/btn_dividir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#4CAF50"
            android:onClick="operacao"
            android:text="@string/dividir" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>